--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.49</version>
        </dependency>
+       <dependency>
+           <groupId>org.bouncycastle</groupId>
+           <artifactId>bcprov-jdk15on</artifactId>
+           <version>1.70</version>
+       </dependency>
+       <dependency>
+           <groupId>org.bouncycastle</groupId>
+           <artifactId>bcpkix-jdk15on</artifactId>
+           <version>1.70</version>
+       </dependency>
 
    </dependencies>
 </project>
