--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
            <artifactId>bcpkix-jdk15on</artifactId>
            <version>1.70</version>
        </dependency>
+       <dependency>
+           <groupId>org.mindrot</groupId>
+           <artifactId>jbcrypt</artifactId>
+           <version>0.4</version>
+       </dependency>
 
    </dependencies>
 </project>
